# driving-theory

./: .gitignore  README.md  driving_theory_questions.csv  driving_theory_questions.json  driving_theory_questions.md  driving_theory_questions_de.csv  driving_theory_questions_de.json  driving_theory_questions_de.md  pyproject.toml  scraper.py  scraper_de.py
driving-theory-bot/: .env.example  README.md  SCALING.md  main.py  pyproject.toml  run.sh  run_optimized.sh
driving-theory-bot/config/: production.py
driving-theory-bot/src/: config.py  driving_theory_bot.db-shm  driving_theory_bot.db-wal  main.py  main_optimized.py
driving-theory-bot/src/database/: db_manager.py  db_pool.py  models.py  optimized_db_manager.py
driving-theory-bot/src/handlers/: optimized_quiz_handler.py  quiz_handler.py
driving-theory-bot/src/utils/: optimized_question_loader.py  question_loader.py  rate_limiter.py  spaced_repetition.py
