[project]
name = "driving-theory-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pandas>=2.0.3",
    "requests>=2.32.3",
]

[tool.uv.workspace]
members = [
    "driving-theory-bot",
]
